--- a/html5andcss3/transitioneffects1.html
+++ b/html5andcss3/transitioneffects1.html
@@ -4,7 +4,7 @@
      
     <head>
  
-        <title>Title Name will go here</title>
+        <title>CSS3 transition effects 2</title>
  
         <style>
              
