--- a/html5andcss3/transitioneffects2.html
+++ b/html5andcss3/transitioneffects2.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
  
 <html>
-     
     <head>
  
-        <title>Title Name will go here</title>
+        <title>CSS3 transition effects 2</title>
  
         <style>
              
